monticore-generator/src/test/resources/cocos/invalid/A4058/A4058c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4058;

grammar A4058c {

  symbol A = "Hello" name:B;
  
  B = "B";
}
